--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Racing+Sans+One&family=Varela+Round&display=swap');
 
 body,
 html {
@@ -6,6 +6,8 @@ html {
   width: 100%;
   height: 100%;
   font-family: 'Varela Round', sans-serif;
+  background-color: #171629;
+  -webkit-tap-highlight-color: rgba(255, 255, 255, 0)
 }
 
 p,
@@ -14,5 +16,5 @@ h2,
 h3,
 h4,
 h5 {
-  font-family: 'Varela Round';
+  font-family: 'Varela Round';    
 }
